Set up unit tests and updated to a larger map for testing. Implemented enemy attacking